--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lab14FabricioHD</string>
+    <string name="quick_shop">Compra rápida</string>
+    <string name="shopping_list">Mi Lista de Compras</string>
 </resources>
